tests/fail/builtin_funcs.frac
print(int y) {
  return y;
}

main() {
  int x = 32;
  print(x);
}
